[package]
name = "wst"
version = "0.1.0"
authors = ["FelixMo42 <felix@tacocat.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
glutin = { version = "0.26.0", default-features = false, features = ["serde", "wayland"] }
wayland-client = "*"
wayland-protocols = "*"
wayland-egl = "*"
tempfile = "*"

