[package]
name = "wst"
version = "0.1.0"
authors = ["FelixMo42 <felix@tacocat.com>"]
edition = "2018"

[dependencies]
wayland-client = { version = "0.28.5" }
wayland-protocols = { version = "0.28.5", features = ["client"] }
wayland-egl = "*"
khronos-egl = { version = "4.1.0", features = ["static"] }
tempfile = "*"
gl = "*"

