[package]
name = "wst"
version = "0.1.0"
authors = ["FelixMo42 <felix@tacocat.com>"]
edition = "2018"

[dependencies]
wayland-client = { version = "0.28.5" }
wayland-protocols = { version = "0.28.5", features = ["client"] }
wayland-egl = { version = "0.28.5" }
khronos-egl = { version = "4.1.0", features = ["static"] }
gl = { version = "0.14.0" }

